tests/baselines/reference/internalAliasUninitializedModule.errors.txt
internalAliasUninitializedModule.ts(9,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasUninitializedModule.ts (1 errors) ====
    module a {
        export module b {
            export interface I {
                foo();
            }
        }
    }
    
    module c {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        import b = a.b;
        export var x: b.I;
        x.foo();
    }